# react-native-nitro-dns

./: README.md  README_zh.md  RNDns.podspec  nitro.json  package.json  tsconfig.json
android/: CMakeLists.txt  OnLoad.cpp  build.gradle  gradle.properties
android/src/main/java/com/margelo/nitro/nitro_dns/: NitroDnsPackage.kt
android/src/main/java/com/nitrodns/: NitroDns.java  NitroDnsProvider.java  NitroOkHttpClientFactory.java
cpp/: HybridDns.cpp  HybridDns.hpp
docs/: compatibility_audit.md
ios/Frameworks/RNDns.xcframework/: Info.plist
ios/Frameworks/RNDns.xcframework/ios-arm64/RNDns.framework/: RNDns
ios/Frameworks/RNDns.xcframework/ios-arm64/RNDns.framework/Headers/: dns_ffi.h
ios/Frameworks/RNDns.xcframework/ios-arm64_x86_64-simulator/RNDns.framework/: Info.plist
ios/Frameworks/RNDns.xcframework/ios-arm64_x86_64-simulator/RNDns.framework/Headers/: dns_ffi.h
ios/NitroDns/: DnsBridge.h  NitroDnsInterceptionManager.swift  NitroDnsRCTBridge.m  NitroDnsURLProtocol.swift  module.modulemap
src/: NitroDns.nitro.ts  index.test.ts  index.ts
test/: cache.test.ts  index.test.ts  mock_test.js
